# Telemetry

./: .gitignore  README.md  SUMMARY.md  pyproject.toml
.github/workflows/: ci.yml  daily-telemetry.yml
2026/07/02/: regime_snapshot.json
2026/07/03/: regime_snapshot.json
2026/07/04/: regime_snapshot.json
2026/07/05/: regime_snapshot.json
2026/07/06/: regime_snapshot.json
2026/07/07/: regime_snapshot.json
2026/07/09/: regime_snapshot.json
2026/07/10/: regime_snapshot.json
2026/07/11/: regime_snapshot.json
2026/07/12/: regime_snapshot.json
2026/07/13/: regime_snapshot.json
2026/07/14/: regime_snapshot.json
2026/07/15/: regime_snapshot.json
2026/07/16/: regime_snapshot.json
2026/07/17/: regime_snapshot.json
2026/07/18/: regime_snapshot.json
2026/07/19/: regime_snapshot.json
2026/07/20/: regime_snapshot.json
2026/07/21/: regime_snapshot.json
2026/07/22/: regime_snapshot.json
2026/07/23/: regime_snapshot.json
bastion_telemetry/: __init__.py  health.py  reader.py  redaction.py
by_date/2026-06-22/: signals.jsonl
by_date/2026-06-26/: signals.jsonl
by_date/2026-06-28/: signals.jsonl
by_date/2026-06-29/: signals.jsonl
by_date/2026-06-30/trade_history/: ftmo_trade_history_export_20260630.csv  (+1 more)
by_date/2026-07-02/: execution.jsonl
configs/: retention.yaml
docs/: DATA_DICTIONARY.md
examples/: synthetic_daily_snapshot.json
schemas/: execution_ledger.schema.json  signal_tape.schema.json
scripts/: build_aggregates.py  generate_daily_stub.py  rules.yaml  sanitise.py
tests/: test_telemetry.py
